--- a/src/ToDo.Api/ToDoUI/src/app/todo/todo.component.html
+++ b/src/ToDo.Api/ToDoUI/src/app/todo/todo.component.html
@@ -24,7 +24,7 @@
 
             <td>
               <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked">
+                <input class="form-check-input" type="checkbox" (change)="eventCheck(todo, $event)" value="" id="flexCheckChecked" [checked]="todo.done">
                 <label class="form-check-label" for="flexCheckChecked">
                 </label>
               </div>
